# obfuscxx

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
cmake/: obfuscxxConfig.cmake.in
dev/bench/: data.js
include/obfuscxx/: obfuscxx.h
metrics/: benchmark.h  unit_test.h
obfuscxx/: quick_test.cpp
obfuscxx/include/: obfuscxx.h
obfuscxx/metrics/: benchmark.h
tests/: CMakePresets.json
tests/benchmark/: CMakeLists.txt  benchmark.cpp  vcpkg.json
tests/unittest/: CMakeLists.txt  CMakePresets.json  unittest.cpp  vcpkg.json
